fixed : updated endpoints properly